[package]
name = "url_shortener_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros", "webhooks-axum"] }
log = "0.4"
pretty_env_logger = "0.4"
nanoid = "0.4"

tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
once_cell = "1.10"
